refactor(monitoring): consumer and index
